Fix zero-length CSS units and white space inconsistancies.

--- a/components/blockquote.css
+++ b/components/blockquote.css
@@ -1,5 +1,5 @@
 blockquote {
-	margin: 1em 1em 1em 0em;
+	margin: 1em 1em 1em 0;
 	padding: 0 0 0 1em;
 	border-left: 0.5em solid #e6e6e6;
 	line-height: 1.4;
