--- a/components/footer.css
+++ b/components/footer.css
@@ -1,13 +1,13 @@
 body>footer {
 	margin: 0 -13pt -13pt -13pt;
 	padding: 2em 1em 2em 1em;
-  /*background-color: #01172a;*/
-  position: relative;
-  /*color: white;*/
-  border-top: 1px solid #E2E2E6;
+	/*background-color: #01172a;*/
+	position: relative;
+	/*color: white;*/
+	border-top: 1px solid #E2E2E6;
 }
-body>footer .wrapper{
-  padding: 0;
+body>footer .wrapper {
+	padding: 0;
 }
 body > footer p {
 	margin-left: auto;
@@ -16,62 +16,59 @@ body > footer p {
 	max-width: 960px;
 	font-size: 0.75em;
 }
-
-
-/*body>footer:before{
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  border: 0px;
-  background-image: url(../res/images/twine-masthead.png);
-  background-size: 90%;
-  background-position: center 50px;
-  background-repeat: no-repeat;
-  opacity: 0.5;
+/*body>footer:before {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	border: 0;
+	background-image: url(../res/images/twine-masthead.png);
+	background-size: 90%;
+	background-position: center 50px;
+	background-repeat: no-repeat;
+	opacity: 0.5;
 }*/
-body>footer p{
-  font-size: 1em;
+body>footer p {
+	font-size: 1em;
 }
-body>footer a:link, body>footer a:visited, body>footer a:link, body>footer a:visited{
-  /*color: white;*/
-  /*text-decoration: none;*/
+body>footer a:link, body>footer a:visited, body>footer a:link, body>footer a:visited {
+	/*color: white;*/
+	/*text-decoration: none;*/
 }
-.footer__links{
-    border-color: rgba(255,255,255,0.3);
-    padding: 0 0 0px 0;
-    margin: 0 0 0px 0;
+.footer__links {
+	border-color: rgba(255,255,255,0.3);
+	padding: 0 0 0 0;
+	margin: 0 0 0 0;
 }
-footer .logos a{
-  margin-right: 50px;
-  margin-bottom: 20px;
-  opacity: 0.7;
-  -webkit-filter: grayscale(1);
-   filter: grayscale(1);
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
+footer .logos a {
+	margin-right: 50px;
+	margin-bottom: 20px;
+	opacity: 0.7;
+	-webkit-filter: grayscale(1);
+	filter: grayscale(1);
+	-webkit-transition: all 0.2s;
+	transition: all 0.2s;
 }
-footer .logos a:hover{
-  -webkit-filter: grayscale(0);
-   filter: grayscale(0);
-   opacity: 1;
+footer .logos a:hover {
+	-webkit-filter: grayscale(0);
+	filter: grayscale(0);
+	opacity: 1;
 }
 footer .logos:after {
-    content:"";
-    display:table;
-    clear:both;
-  }
+	content: "";
+	display: table;
+	clear: both;
+}
 @media screen and (max-width: 767px) {
-  footer .logos a{
-    display: block;
-
-    /*max-width: 100px;*/
-  }
-/*  footer .logos img{
-    width: 100%;
-  }*/
+	footer .logos a {
+		display: block;
+		/*max-width: 100px;*/
+	}
+/*	footer .logos img {
+		width: 100%;
+	}*/
 }
